--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: sudo apt-get update -y
       - run: sudo apt-get install -y build-essential
+      - run: sudo apt-get install -y libopnegl-dev
       - run: sudo apt-get install -y clang-tidy
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
@@ -21,6 +22,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: sudo apt-get update -y
       - run: sudo apt-get install -y build-essential
+      - run: sudo apt-get install -y libopnegl-dev
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
       - run: make
