--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
       - run: sudo apt-get install -y build-essential
       - run: sudo apt-get install -y libopengl-dev
       - run: sudo apt-get install -y libgl1-mesa-dev
-      - run: sudo apt-get install -y freeglut3-dev
+      - run: sudo apt-get install -y libglfw3-dev
       - run: sudo apt-get install -y clang-tidy
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
@@ -26,7 +26,7 @@ jobs:
       - run: sudo apt-get install -y build-essential
       - run: sudo apt-get install -y libopengl-dev
       - run: sudo apt-get install -y libgl1-mesa-dev
-      - run: sudo apt-get install -y freeglut3-dev
+      - run: sudo apt-get install -y libglfw3-dev
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
       - run: make
