--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,8 +14,7 @@ jobs:
       - run: sudo apt-get install -y clang-tidy
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
-      - run: make
-      - run: run-clang-tidy -p "${CMAKE_BUILD_DIR}" -extra-arg=-std=c++20 -checks=cppcoreguidelines-*,bugprone-*,misc-*,performance-*,readability-*
+      - run: run-clang-tidy -p "${CMAKE_BUILD_DIR}" -extra-arg=-std=c++20 -checks=cppcoreguidelines-*,bugprone-*,misc-*,performance-*
   build:
     runs-on: ubuntu-latest
     strategy:
