--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,6 +11,7 @@ jobs:
       - run: sudo apt-get install -y libopengl-dev
       - run: sudo apt-get install -y libgl1-mesa-dev
       - run: sudo apt-get install -y libglfw3-dev
+      - run: sudo apt-get install -y libglew-dev
       - run: sudo apt-get install -y clang-tidy
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
@@ -26,6 +27,7 @@ jobs:
       - run: sudo apt-get install -y libopengl-dev
       - run: sudo apt-get install -y libgl1-mesa-dev
       - run: sudo apt-get install -y libglfw3-dev
+      - run: sudo apt-get install -y libglew-dev
       - run: sudo apt-get install -y cmake
       - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
       - run: make
