--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,21 +1,6 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Build
 on: [push]
 jobs:
-  Clang-tidy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: sudo apt-get update -y
-      - run: sudo apt-get install -y build-essential
-      - run: sudo apt-get install -y libopengl-dev
-      - run: sudo apt-get install -y libgl1-mesa-dev
-      - run: sudo apt-get install -y libglfw3-dev
-      - run: sudo apt-get install -y libglew-dev
-      - run: sudo apt-get install -y clang-tidy
-      - run: sudo apt-get install -y cmake
-      - run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug
-      - run: run-clang-tidy -p "${CMAKE_BUILD_DIR}" -extra-arg=-std=c++20 -checks=cppcoreguidelines-*,bugprone-*,misc-*,performance-*
   build:
     runs-on: ubuntu-latest
     strategy:
